<resources>
    <string name="app_name">Carpool</string>

    <string name="spinner_type">Select Model</string>
    <string name="spinner_color">Select Color</string>
    <string-array name="car_type_array">
        <item>Benz</item>
        <item>BMW</item>
        <item>Audi</item>
        <item>Porsche</item>
        <item>Honda</item>
        <item>Toyoto</item>
        <item>Ford</item>
        <item>OTHERS</item>
    </string-array>
    <string-array name="car_color_array">
        <item>Red</item>
        <item>Silver</item>
        <item>White</item>
        <item>Blue</item>
        <item>Black</item>
        <item>Grey</item>
        <item>Green</item>
    </string-array>
    <string name="rateword">您的当前评分为 </string>
    <string name="select_1">我有车然后想载其他小伙伴们！</string>
    <string name="select_2">我还没有车然后想搭其他小伙伴们的车</string>
    <string name="login">Login</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_password">密码</string>
    <string name="hint_verify_code">验证码</string>
    <string name="bt_login">登入</string>
    <string name="bt_forget_pass">忘记密码?</string>
    <string name="bt_new_account">快速注册账户</string>
    <string name="bt_receive">获取验证码</string>
    <string name="bt_next">下一步</string>
    <string name="forget_bt_next">修改密码</string>
    <string name="change_pass_bt">确认修改密码</string>
    <string name="enter_new_pass_bt">输入新密码</string>
    <string name="confirm_pass_bt">确认新密码</string>
    <string name="new_edit_account_name">账号昵称</string>
    <string name="school_edit_name">所在学校</string>
    <string name="regis_next">下一步</string>
    <string name="test_phone">6476778548</string>
    <string name="car_regis_bt">车辆注册</string>
    <string name="car_model">车辆型号</string>
    <string name="section_login">完成注册</string>
    <string name="section1">我要载人</string>
    <string name="section2">我要搭车</string>
    <string name="profile_rate">3.5</string>
    <string name="profile_change">确认修改个人信息</string>
    <string name="profile_setting_name">LEO2SWAG</string>
    <string name="profile_setting_car_type">Benz</string>
    <string name="profile_setting_car_plate_number">LRJ6666</string>
    <string name="profile_setting_car_color">Blue</string>
    <string name="profile_setting_user_name">账号昵称/修改</string>
    <string name="profile_car_type">车辆型号/修改</string>
    <string name="profile_car_color">车辆颜色/修改</string>
    <string name="profile_plate_number">牌照信息/修改</string>
    <string name="profile_phone_hint">绑定的-手机号</string>
    <string name="car_info_plate_number">牌照信息</string>
</resources>

