<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="github.io.carpool.ForgetPhoneVerifyActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forget_til_verify_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/forget_edit_verify_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forget_til_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditTextLabel"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/forget_edit_verify_code"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_verify_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/forget_bt_send_vcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_receive"
            android:maxLines="1"
            android:layout_weight="3"
            android:background="@drawable/roundshape"
            android:layout_marginTop="5dp"
            android:theme="@style/getCode"
            />
    </LinearLayout>

    <Button
        android:id="@+id/forget_bt_verify_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTheme"
        android:text="@string/forget_bt_next"
        android:layout_marginTop="8dp"/>

</LinearLayout>
