<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="github.io.carpool.TitleActivity"
    android:orientation="vertical"
    android:id="@+id/title_page_bg"
    android:focusableInTouchMode="true"
    android:background="@drawable/loginbg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:theme="@style/logintext" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/loginpagewrap">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:theme="@style/LoginEditTextLabel">

                <EditText
                    android:id="@+id/edit_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_phone"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:theme="@style/textwithicon"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/LoginEditTextLabel">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icon_pass"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:theme="@style/textwithicon" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/buttonswrap">

                <Button
                    android:id="@+id/bt_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/roundshape"
                    android:text="@string/bt_login"
                    android:theme="@style/loginTitleButton" />

                <Button
                    android:id="@+id/bt_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorTransparent"
                    android:text="@string/bt_new_account"
                    android:theme="@style/forgetButton" />

                <Button
                    android:id="@+id/bt_forget_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparent"
                    android:text="@string/bt_forget_pass"
                    android:theme="@style/forgetButton" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
