<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="github.io.carpool.ChangePassActivity"
    android:orientation="vertical"
    android:background="@drawable/loginbg"
    android:focusableInTouchMode="true"
    android:id="@+id/wrapper_bg_regis"
    >

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_til_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/new_edit_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_edit_account_name"
            android:imeOptions="actionNext"
            android:drawableStart="@drawable/icon_phone"
            android:inputType="text"
            android:theme="@style/textwithicon"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/new_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_pass_bt"
            android:drawableStart="@drawable/icon_pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:theme="@style/textwithicon"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/regis_til_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/RegisPhoneTextLabel">

        <EditText
            android:id="@+id/regis_edit_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:theme="@style/textwithicon"
            android:drawableStart="@drawable/icon_contact"
            android:text="@string/test_phone" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/school_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/school_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school_edit_name"
            android:imeOptions="actionNext"
            android:drawableStart="@drawable/icon_location"
            android:theme="@style/textwithicon"
            android:inputType="textAutoComplete"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/regis_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundshape"
        android:theme="@style/loginTitleButton"
        android:text="@string/regis_next"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/in_progress"
        style="@style/MyProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>
