<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="github.io.carpool.ChangePassActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_til_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/new_edit_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_pass_bt"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirm_til_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/LoginEditTextLabel">

        <EditText
            android:id="@+id/confirm_edit_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass_bt"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/change_pass_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTheme"
        android:text="@string/change_pass_bt"
        android:layout_marginTop="8dp"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/change_pass_progress"
        style="@style/MyProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

</LinearLayout>
