<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper_verify_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:focusableInTouchMode="true"
    tools:context="github.io.carpool.PhoneVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_verify_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/LoginEditTextLabel">

            <EditText
                android:id="@+id/edit_verify_phone_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:hint="@string/hint_phone"
                android:theme="@style/textwithicon"
                android:drawableLeft="@drawable/icon_phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/LoginEditTextLabel">

                <EditText
                    android:id="@+id/edit_verify_code"
                    android:layout_width="235dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/textwithicon"
                    android:drawableLeft="@drawable/icon_msg"
                    android:hint="@string/hint_verify_code"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/bt_send_vcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:maxLines="1"
                android:text="@string/bt_receive"
                android:theme="@style/getCode" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_verify_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/roundshape"
            android:text="@string/bt_next"
            android:theme="@style/loginTitleButton" />

    </LinearLayout>


</LinearLayout>
